Finish simulation with frontier biasing

--- a/src/tb3_navigations_1/param/explore_lite_2.yaml
+++ b/src/tb3_navigations_1/param/explore_lite_2.yaml
@@ -1,11 +1,11 @@
 robot_base_frame: tb3_2/base_link
 costmap_topic: map
-costmap_updates_topic: tb3_2/map_updates
+costmap_updates_topic: map_updates
 visualize: true
-planner_frequency: 0.33
+planner_frequency: 1
 progress_timeout: 30.0
-potential_scale: 3.0
+potential_scale: 1e-3
 orientation_scale: 0.0
 gain_scale: 1.0
-transform_tolerance: 0.5
+transform_tolerance: 0.3
 min_frontier_size: 0.75
